<resources>
    <string name="app_name">DM125</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="data">Data</string>
    <string name="time">Hora</string>
    <string name="save">Salvar</string>
    <string name="notification_permission_rationale">Você receberá uma notificação para te lembrar de terminar suas tarefas.</string>
    <string name="accept">Aceito</string>
    <string name="not_accept">Não aceito</string>
    <string name="notifications">Notificações</string>
    <string name="daily_notification_off">Não receber notificações diárias</string>
    <string name="daily_notification_on">Receber notificações diárias</string>
    <string name="daily_notification">Notificação diária</string>
    <string name="settings">Configurações</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="create_account">Criar conta</string>
    <string name="logout">Sair</string>
    <string name="mark_as_completed">Completada</string>
    <string name="no_tasks">Sem tarefas</string>
    <string name="get_tasks_error">Não foi possível obter as tarefas</string>
    <string name="new_task_information">Cria uma nova tarefa</string>
    <string name="share">Compartilhar</string>
    <string name="share_using">Compartilhar com...</string>
    <string name="expanded_date">Visualizar data</string>
    <string name="id_token">ID Token</string>
</resources>