<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreferenceCompat
            android:key="daily_notification"
            android:summaryOff="@string/daily_notification_off"
            android:summaryOn="@string/daily_notification_on"
            android:title="@string/daily_notification"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="Visualizar datas por extenso">
        <SwitchPreferenceCompat
            android:key="expanded_date"
            android:summaryOff="22/12/1997"
            android:summaryOn="22 de dezembro de 1997"
            android:title="@string/expanded_date" />
    </PreferenceCategory>

</PreferenceScreen>